--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>QuakeJS</title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
-    <script type="text/javascript" src="sketch.js"></script>
+    <!-- Load dependencies -->
+    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script langiage="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 <body>
 
