--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- Load dependencies -->
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script langiage="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+    
+    <!-- Main JS -->
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 <body>
